# beancount-no-amex

./: AGENTS.md  LICENSE  README.md  justfile  main.py  pyproject.toml
.github/workflows/: test.yml
beancount_no_amex/: __init__.py  classify.py  credit.py  models.py
docs/: README.md  conftest.py  examples.md
examples/literate/: 2024.beancount  README.md  accounts.beancount  finance.org
src/beancount_no_amex/: __init__.py  credit.py  importer.py
test_data/: activity.qbo  activity.qbo.beancount
tests/: conftest.py  test_currency.py  test_deduplication.py  test_extract.py  test_finalize.py  test_fluent_api.py  test_identify.py  test_models.py  test_packaging.py  test_parsing.py  test_pattern_matching.py  test_public_api.py
tests/fixtures/: edge_cases.qbo  minimal.qbo  monthly_export.qbo  multi_currency.qbo
