[project]
name = "beancount-no-amex"
version = "0.1.0"
description = "A library that converts transaction data from American Express cards issued in Norway into structured Beancount accounting format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.1.0",
    "beancount-classifier",
    "beangulp>=0.2.0",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["beancount_no_amex"]

[tool.hatch.build.targets.wheel]
packages = ["beancount_no_amex"]

[tool.uv]
package = true

[tool.uv.sources]
beancount-classifier = { git = "https://github.com/staticaland/beancount-classifier" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
beancount-no-amex = "beancount_no_amex.credit:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
