[project]
name = "beancount-no-amex"
dynamic = ["version"]
description = "A library that converts transaction data from American Express cards issued in Norway into structured Beancount accounting format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.1.0",
    "beancount-classifier",
    "beangulp>=0.2.0",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
]

[tool.uv]
package = true

[tool.uv.sources]
beangulp = { git = "https://github.com/beancount/beangulp" }
beancount-classifier = { path = "../beancount-classifier" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_no_amex"]

[tool.hatch.version]
path = "src/beancount_no_amex/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
